Silence JVM warnings in build script